# nvhpc-issues

./: .gitignore
10min/: algorithm_state_mod.mod  bytes_io_mod.mod  compensated_summation_mod.mod  cplng_types_mod.mod  ddh_mix.mod  deallocate_if_allocated_mod.mod  ec_lun.mod  ec_parkind.mod  ec_phys_fields_mod.mod  ecsort_mix.mod  eint_mod.mod  fdbsubs_mod.mod  field_1im_data_module.mod  field_1im_factory_module.mod  field_1im_module.mod  field_1lm_data_module.mod  field_1lm_factory_module.mod  field_1lm_module.mod  field_1rb_data_module.mod  field_1rb_factory_module.mod  field_1rb_module.mod  field_1rd_data_module.mod  field_1rd_factory_module.mod  field_1rd_module.mod  field_1rm_data_module.mod  field_1rm_factory_module.mod  field_1rm_module.mod  field_2im_data_module.mod  field_2im_factory_module.mod  field_2im_module.mod  field_2lm_data_module.mod  field_2lm_factory_module.mod  field_2lm_module.mod  field_2rb_data_module.mod  field_2rb_factory_module.mod  field_2rb_module.mod  field_2rd_data_module.mod  field_2rd_factory_module.mod  field_2rd_module.mod  field_2rm_data_module.mod  (+334 more)
25min/: ec_lun.mod  field_1im_data_module.mod  field_1im_factory_module.mod  field_1lm_factory_module.mod  field_1lm_module.mod  field_1rb_factory_module.mod  field_1rd_data_module.mod  field_1rm_data_module.mod  field_1rm_factory_module.mod  field_1rm_gang_module.mod  field_2im_gang_module.mod  field_2lm_gang_module.mod  field_2rb_access_module.mod  field_2rb_gang_module.mod  field_2rb_module.mod  field_2rd_gang_module.mod  field_2rm_data_module.mod  field_2rm_factory_module.mod  field_2rm_module.mod  field_3im_access_module.mod  field_3im_data_module.mod  field_3im_factory_module.mod  field_3im_gang_module.mod  field_3im_module.mod  field_3lm_access_module.mod  field_3lm_module.mod  field_3rb_data_module.mod  field_3rb_module.mod  field_3rd_access_module.mod  field_3rd_factory_module.mod  field_3rd_gang_module.mod  field_3rm_access_module.mod  field_3rm_data_module.mod  field_3rm_factory_module.mod  field_3rm_gang_module.mod  field_3rm_module.mod  field_4im_access_module.mod  field_4im_data_module.mod  field_4lm_access_module.mod  field_4lm_factory_module.mod  (+25 more)
30m/: ec_parkind.mod  field_1im_access_module.mod  field_1im_gang_module.mod  field_1im_module.mod  field_1lm_access_module.mod  field_1lm_data_module.mod  field_1lm_gang_module.mod  field_1rb_access_module.mod  field_1rb_data_module.mod  field_1rb_gang_module.mod  field_1rb_module.mod  field_1rd_access_module.mod  field_1rd_factory_module.mod  field_1rd_gang_module.mod  field_1rd_module.mod  field_1rm_access_module.mod  field_1rm_module.mod  field_2im_access_module.mod  field_2im_data_module.mod  field_2im_factory_module.mod  field_2im_module.mod  field_2lm_access_module.mod  field_2lm_data_module.mod  field_2lm_factory_module.mod  field_2lm_module.mod  field_2rb_data_module.mod  field_2rb_factory_module.mod  field_2rd_access_module.mod  field_2rd_data_module.mod  field_2rd_factory_module.mod  field_2rd_module.mod  field_2rm_access_module.mod  field_2rm_gang_module.mod  field_3lm_data_module.mod  field_3lm_factory_module.mod  field_3lm_gang_module.mod  field_3rb_access_module.mod  field_3rb_factory_module.mod  field_3rb_gang_module.mod  (+39 more)
bounds/: a.out  (+2 more)
nocuda/ectrans/: CMakeLists.txt
nocuda/ectrans/src/: CMakeLists.txt
nocuda/ectrans/src/programs/: CMakeLists.txt  ectrans-benchmark.F90
nocuda/ectrans/src/trans/cpu/: CMakeLists.txt
nocuda/ectrans/src/trans/gpu/: CMakeLists.txt
nocuda/ectrans/src/trans/gpu/algor/module/: IPC_Alltoall.cu
nocuda/ectrans/src/trans/gpu/internal/: inv_trans_ctl_mod.F90
(+880 files in other folders)
